--- a/debian/rules
+++ b/debian/rules
@@ -59,8 +59,8 @@ override_dh_installdocs:
 	dh_installdocs -a --all ChangeLog
 
 override_dh_installlogrotate:
-	cp src/logrotate.conf debian/ceph-base.ceph.logrotate
-	dh_installlogrotate -pceph-base --name=ceph
+	cp src/logrotate.conf debian/ceph-common.logrotate
+	dh_installlogrotate -pceph-common
 
 override_dh_installinit:
 	# dh_installinit is only set up to handle one upstart script
