--- a/qa/suites/rados/upgrade/jewel-x-singleton/6-finish-upgrade.yaml
+++ b/qa/suites/rados/upgrade/jewel-x-singleton/6-finish-upgrade.yaml
@@ -9,3 +9,7 @@ tasks:
     daemons: [osd.3, osd.4, osd.5]
     wait-for-up: true
     wait-for-healthy: false
+- ceph.restart:
+    daemons: [mds.a]
+    wait-for-up: true
+    wait-for-healthy: false
