--- a/src/kv/CMakeLists.txt
+++ b/src/kv/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(kv_srcs
   KeyValueDB.cc
+  LMDBStore.cc
   MemDB.cc
   RocksDBStore.cc)
 
@@ -9,9 +10,9 @@ endif (WITH_LEVELDB)
 
 add_library(kv_objs OBJECT ${kv_srcs})
 add_library(kv STATIC $<TARGET_OBJECTS:kv_objs>)
-target_include_directories(kv_objs BEFORE PUBLIC ${ROCKSDB_INCLUDE_DIR})
-target_include_directories(kv BEFORE PUBLIC ${ROCKSDB_INCLUDE_DIR})
-target_link_libraries(kv ${LEVELDB_LIBRARIES} ${ROCKSDB_LIBRARIES} ${ALLOC_LIBS} ${SNAPPY_LIBRARIES} ${ZLIB_LIBRARIES})
+target_include_directories(kv_objs BEFORE PUBLIC ${ROCKSDB_INCLUDE_DIR} ${LMDB_INCLUDE_DIR})
+target_include_directories(kv BEFORE PUBLIC ${ROCKSDB_INCLUDE_DIR} ${LMDB_INCLUDE_DIR})
+target_link_libraries(kv ${LEVELDB_LIBRARIES} ${ROCKSDB_LIBRARIES} ${LMDB_LIBRARIES} ${ALLOC_LIBS} ${SNAPPY_LIBRARIES} ${ZLIB_LIBRARIES})
 
 # rocksdb detects bzlib and lz4 in its Makefile, which forces us to do the same.
 find_package(BZip2 QUIET)
