--- a/qa/suites/rgw/verify/tasks/rgw_tempest.yaml
+++ b/qa/suites/rgw/verify/tasks/rgw_tempest.yaml
@@ -26,27 +26,23 @@ tasks:
         - name: swift
           type: object-store
           description: Swift Service
-      endpoints:
-        - service: keystone
-          publicurl: http://127.0.1:$(public_port)s/v2.0
-        - service: swift
-          publicurl: http://127.0.0.1:7280/v1/KEY_$(tenant_id)s
 - rgw:
     frontend_prefix: /swift
     client.0:
       valgrind: [--tool=memcheck]
-      extra_params: --rgw_keystone_url=http://localhost:35357
+      use-keystone-role: client.0
 - tempest:
     client.0:
       force-branch: master
+      use-keystone-role: client.0
       auth:
         admin_username: admin
         admin_project_name: admin
         admin_password: ADMIN
         admin_domain_name: Default
       identity:
-        uri: http://127.0.0.1:5000/v2.0/
-        uri_v3: http://127.0.0.1:5000/v3/
+        uri: http://{keystone_public_host}:{keystone_public_port}/v2.0/
+        uri_v3: http://{keystone_public_host}:{keystone_public_port}/v3/
         admin_role: admin
       object-storage:
         reseller_admin_role: admin
@@ -70,7 +66,6 @@ overrides:
         osd_min_pg_log_entries: 10
         osd_max_pg_log_entries: 10
       client:
-        rgw keystone url: http://localhost:35357
         rgw keystone admin token: ADMIN
         rgw keystone accepted roles: admin,Member
         rgw keystone implicit tenants: true
