cmake: use CMAKE_INSTALL_INCLUDEDIR
Header files are currently installed under a hardcoded "include" path.
Use CMAKE_INSTALL_INCLUDEDIR instead, which defaults to "include" but
allows for customisation alongside other (already used) CMAKE_INSTALL_X
paths.

Signed-off-by: David Disseldorp <ddiss@suse.de>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -993,7 +993,7 @@ if(WITH_LIBCEPHFS)
   install(TARGETS cephfs DESTINATION ${CMAKE_INSTALL_LIBDIR})
   install(DIRECTORY
     "${CMAKE_SOURCE_DIR}/src/include/cephfs"
-    DESTINATION include)
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
   set(ceph_syn_srcs
     ceph_syn.cc
     client/SyntheticClient.cc)
