--- a/src/include/CMakeLists.txt
+++ b/src/include/CMakeLists.txt
@@ -9,23 +9,23 @@ install(FILES rados/librados.h
   page.h
   crc32c.h
   rados/objclass.h
-  DESTINATION include/rados)
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/rados)
 install(FILES
   radosstriper/libradosstriper.h
   radosstriper/libradosstriper.hpp
-  DESTINATION include/radosstriper)
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/radosstriper)
 
 if(WITH_RBD)
   install(FILES
     rbd/features.h
     rbd/librbd.h
     rbd/librbd.hpp
-    DESTINATION include/rbd)
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/rbd)
 endif()
 
 if(WITH_RADOSGW)
   install(FILES
     rados/librgw.h
     rados/rgw_file.h
-  DESTINATION include/rados)
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/rados)
 endif()
