--- a/src/libcephd/CMakeLists.txt
+++ b/src/libcephd/CMakeLists.txt
@@ -41,4 +41,5 @@ merge_static_libraries(cephd ${merge_libs})
 
 # TODO: install these libraries and add them to rpm and deb packages
 #install(TARGETS cephd DESTINATION ${CMAKE_INSTALL_LIBDIR})
-#install(FILES ../include/cephd/libcephd.h DESTINATION include/cephd)
+#install(FILES ../include/cephd/libcephd.h
+#  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/cephd)
