--- a/teuthology/ceph.conf.template
+++ b/teuthology/ceph.conf.template
@@ -23,6 +23,7 @@
 	mon warn on legacy crush tunables = false
 	mon warn on crush straw calc version zero = false
 	mon warn on no sortbitwise = false
+	mon warn on osd down out interval zero = false
 
         osd pool default erasure code profile = "plugin=jerasure technique=reed_sol_van k=2 m=1 ruleset-failure-domain=osd crush-failure-domain=osd"
 
