qa/suites/rados/basic/tasks/rgw_snaps: fix pool list
Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/rados/basic/tasks/rgw_snaps.yaml
+++ b/qa/suites/rados/basic/tasks/rgw_snaps.yaml
@@ -13,11 +13,9 @@ tasks:
     pools:
     - .rgw.buckets
     - .rgw.root
-    - .rgw.control
-    - .rgw
-    - .users.uid
-    - .users.email
-    - .users
+    - default.rgw.control
+    - default.rgw.meta
+    - default.rgw.log
 - s3readwrite:
     client.0:
       rgw_server: client.0
