common: add std::not_fn to backport14.h and unit tests
Signed-off-by: Casey Bodley <cbodley@redhat.com>

--- a/src/test/common/CMakeLists.txt
+++ b/src/test/common/CMakeLists.txt
@@ -271,4 +271,8 @@ add_executable(unittest_iso_8601
     test_iso_8601.cc)
 target_link_libraries(unittest_iso_8601 ceph-common)
 add_ceph_unittest(unittest_iso_8601
-  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unittest_hostname)
+  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unittest_iso_8601)
+
+add_executable(unittest_backport14 test_backport14.cc)
+add_ceph_unittest(unittest_backport14
+  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unittest_backport14)
