--- a/qa/suites/rados/singleton/all/erasure-code-nonregression.yaml
+++ b/qa/suites/rados/singleton/all/erasure-code-nonregression.yaml
@@ -12,6 +12,6 @@ openstack:
 tasks:
 - install:
 - workunit:
-    client.0:
+    clients:
       all:
         - erasure-code/encode-decode-non-regression.sh
