--- a/qa/suites/upgrade/nautilus-x/stress-split/1-ceph-install/nautilus.yaml
+++ b/qa/suites/upgrade/nautilus-x/stress-split/1-ceph-install/nautilus.yaml
@@ -15,7 +15,8 @@ tasks:
 - print: "**** done ceph"
 - rgw:
    - client.0
-- print: "**** done => started rgw client.0"
+   - client.1
+- print: "**** done => started rgw client.0 & client.1"
 overrides:
   ceph:
     conf:
