--- a/qa/suites/upgrade/nautilus-x/stress-split/5-finish-upgrade.yaml
+++ b/qa/suites/upgrade/nautilus-x/stress-split/5-finish-upgrade.yaml
@@ -3,10 +3,11 @@ tasks:
     osd.8:
     client.0:
 - ceph.restart:
-    daemons: [mon.c, osd.8, osd.9, osd.10, osd.11, rgw.*]
+    daemons: [mon.c, osd.8, osd.9, osd.10, osd.11, ceph.rgw.client.1]
     wait-for-healthy: false
     wait-for-osds-up: true
-- print: "**** restarted/upgrated => mon.c, osd.8, osd.9, osd.10, osd.11, rgw.*"
+# restart all rgw clients as rgw.*
+- print: "**** restarted/upgrated => mon.c, osd.8, osd.9, osd.10, osd.11, ceph.rgw.client.1"
 - exec:
     osd.0:
       - ceph osd set pglog_hardlimit
