--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -378,6 +378,7 @@ set(ceph_common_deps
   ${BLKID_LIBRARIES}
   ${Backtrace_LIBRARIES}
   ${BLKIN_LIBRARIES}
+  ${JAEGER_LIBRARIES}
   ${CRYPTO_LIBS}
   ${GSSAPI_LIBRARIES}
   ${CMAKE_THREAD_LIBS_INIT}
