--- a/src/osd/CMakeLists.txt
+++ b/src/osd/CMakeLists.txt
@@ -48,7 +48,8 @@ add_library(osd STATIC ${osd_srcs}
   $<TARGET_OBJECTS:global_common_objs>)
 target_link_libraries(osd
   PUBLIC dmclock::dmclock
-  PRIVATE os heap_profiler cpu_profiler ${CMAKE_DL_LIBS})
+  PRIVATE os heap_profiler cpu_profiler ${CMAKE_DL_LIBS}
+  ${COMPLETE_JAEGER_LIBRARIES})
 if(WITH_LTTNG)
   add_dependencies(osd osd-tp pg-tp)
 endif()
