--- a/src/pybind/mgr/dashboard/frontend/tsconfig.json
+++ b/src/pybind/mgr/dashboard/frontend/tsconfig.json
@@ -11,8 +11,19 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es2015",
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom"],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2017",
+      "dom"
+    ],
     "allowJs": true
-  }
+  },
+  "exclude": [
+    ".protractor-report",
+    "coverage",
+    "dist",
+    "node_modules"
+  ]
 }
