mgr/dashboard: fix tox and add autopep8 'fix' env
Fixes missing config settings around tox and flake8.

Adds toxenv 'fix' to automatically fix PEP8 issues. As we have disabled
so many PEP8 warnings, this currently fixes issues that may pass through
the toxenv 'lint'.

Fixes: https://tracker.ceph.com/issues/41379
Signed-off-by: Ernesto Puerta <epuertat@redhat.com>

--- a/src/pybind/mgr/dashboard/tox.ini
+++ b/src/pybind/mgr/dashboard/tox.ini
@@ -2,6 +2,7 @@
 envlist =
     py{27,3},
     lint,
+    fix,
     check,
     run,
 skipsdist = true
@@ -35,7 +36,18 @@ commands = {posargs}
 [flake8]
 max-line-length = 100
 ignore = E123 E126 E226 E402 W503 E741 F812
-exclude = venv, frontend, .*
+exclude =
+    .tox,
+    .git,
+    __pycache__,
+    build,
+    dist,
+    *.egg-info,
+    .cache,
+    *.pyc,
+    .eggs,
+    venv,
+    frontend,
 statistics = True
 #TODO: Uncomment and refactor (https://tracker.ceph.com/issues/41221)
 #max-complexity = 10
@@ -58,13 +70,32 @@ dirs =
     HACKING.rst
 
 [testenv:lint]
-basepython = python3
+basepython=python3
 deps =
     -rrequirements-lint.txt
 commands =
-    rstcheck --report info --debug {posargs:{[rstlint]dirs}}
-    flake8 {posargs}
-    pylint {[pylint]addopts} {posargs:{[pylint]dirs}}
+    lint: flake8 {posargs}
+    lint: pylint {[pylint]addopts} {posargs:{[pylint]dirs}}
+    lint: rstcheck --report info --debug {posargs:{[rstlint]dirs}}
+
+
+[autopep8]
+addopts =
+    --max-line-length {[flake8]max-line-length}
+    --exclude "{[flake8]exclude}"
+    --in-place
+    --recursive
+# TODO: we should progressively increase the level of compliance with PEP8
+#    --aggressive
+#    --aggressive
+
+[testenv:fix]
+basepython=python3
+deps =
+    -rrequirements-lint.txt
+commands =
+    python --version
+    autopep8 {[autopep8]addopts} {posargs:.}
 
 
 [testenv:check]
