--- a/debian/control
+++ b/debian/control
@@ -57,10 +57,10 @@ Build-Depends: cmake (>= 3.5),
                libxml2-dev,
 # Crimson      libyaml-cpp-dev,
                librabbitmq-dev,
-# Make-Check   libxmlsec1
-# Make-Check   libxmlsec1-nss
-# Make-Check   libxmlsec1-openssl
-# Make-Check   libxmlsec1-dev
+# Make-Check   libxmlsec1,
+# Make-Check   libxmlsec1-nss,
+# Make-Check   libxmlsec1-openssl,
+# Make-Check   libxmlsec1-dev,
                lsb-release,
                parted,
                patch,
