qa/tests: adding mgr.x into the restart/upgrade sequence before monitors
Fixes: https://tracker.ceph.com/issues/41513
Signed-off-by: Yuri Weinstein <yweinste@redhat.com>

--- a/qa/suites/upgrade/nautilus-p2p/nautilus-p2p-parallel/point-to-point-upgrade.yaml
+++ b/qa/suites/upgrade/nautilus-p2p/nautilus-p2p-parallel/point-to-point-upgrade.yaml
@@ -165,6 +165,9 @@ upgrade-sequence_nautilus:
    - ceph.restart: [osd.5]
    - sleep:
        duration: 60
+   - ceph.restart: [mgr.x]
+   - sleep:
+       duration: 60
    - ceph.restart: [mon.a]
    - sleep:
        duration: 60
