--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -47,6 +47,7 @@
 %{!?_udevrulesdir: %global _udevrulesdir /lib/udev/rules.d}
 %{!?tmpfiles_create: %global tmpfiles_create systemd-tmpfiles --create}
 %{!?python3_pkgversion: %global python3_pkgversion 3}
+%{!?python3_version_nodots: %global python3_version_nodots 3}
 %{!?python3_version: %global python3_version 3}
 # unify libexec for all targets
 %global _libexecdir %{_exec_prefix}/lib
@@ -194,7 +195,7 @@ BuildRequires:	python-sphinx
 %if 0%{?rhel}
 BuildRequires:	python%{python3_pkgversion}-devel
 BuildRequires:	python%{python3_pkgversion}-setuptools
-BuildRequires:	python%{python3_pkgversion}-Cython
+BuildRequires:	python%{python3_version_nodots}-Cython
 %endif
 # lttng and babeltrace for rbd-replay-prep
 %if %{with lttng}
