--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -150,8 +150,7 @@ BuildRequires:	fuse-devel
 %if 0%{?rhel} == 7
 # devtoolset offers newer make and valgrind-devel, but the old ones are good
 # enough.
-# see https://github.com/ceph/ceph/pull/28859
-BuildRequires:	devtoolset-8-gcc-c++ = 8.2.1
+BuildRequires:	devtoolset-8-gcc-c++ >= 8.3.1-3.1
 %else
 BuildRequires:	gcc-c++
 %endif
