--- a/qa/suites/rgw/crypt/4-tests/s3tests.yaml
+++ b/qa/suites/rgw/crypt/4-tests/s3tests.yaml
@@ -2,4 +2,9 @@ tasks:
 - s3tests:
     client.0:
       force-branch: ceph-master
-      kms_key: my-key-1
+      barbican:
+        kms_key: my-key-1
+        kms_key2: my-key-2
+      vault:
+        key_path: /v1/kv/data/my-key-1
+        key_path2: /v1/kv/data/my-key-2
