--- a/src/pybind/mgr/CMakeLists.txt
+++ b/src/pybind/mgr/CMakeLists.txt
@@ -5,6 +5,11 @@ add_subdirectory(insights)
 add_subdirectory(ansible)
 add_subdirectory(orchestrator_cli)
 
+if(WITH_TESTS)
+  include(AddCephTest)
+  add_tox_test(mgr ${CMAKE_CURRENT_SOURCE_DIR})
+endif()
+
 # Location needs to match default setting for mgr_module_path, currently:
 # OPTION(mgr_module_path, OPT_STR, CEPH_PKGLIBDIR "/mgr")
 install(DIRECTORY
